--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,7 +11,7 @@
 
 <body class="font-['helvetica_now_display']">
     <nav class="w-full fixed top-0 left-0 px-5 py-3 flex justify-between bg-white z-50">
-        <h3 class="text-xl">Scatch</h3>
+        <h3 class="text-xl"></h3>
         <div class="flex gap-5">
             <% var isLogin = typeof isLogin !== "undefined" ? isLogin : true; %>
             <% if (isLogin) { %>
