--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
 
 <body class="font-['helvetica_now_display']">
     <nav class="w-full fixed top-0 left-0 px-5 py-3">
-        <h3 class="text-xl">bag shop</h3>
+       
     </nav>
 
     <!-- Include header partial -->
@@ -35,7 +35,7 @@
                             <form autocomplete="off" action="/users/register" method="post">
                                 <input
                                     class="bg-zinc-100 block w-full px-3 py-2 border-[1px] rounded-md mb-3 border-zinc-200"
-                                    type="text" placeholder="Full Name" name="fullname" required>
+                                    type="text" placeholder="Full Name" name="fullName" required>
                                 <input
                                     class="bg-zinc-100 block w-full px-3 py-2 border-[1px] rounded-md mb-3 border-zinc-200"
                                     type="email" placeholder="Email" name="email" required>
